--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,6 @@
 name = "ddn_package_view"
 type = "javascript"
 workers_dev = true
+account_id = "77a2ec0ca677d2dbbcd71851c58b072a"
+zone_id = "5293b42677b5b5b56d9bb6604f9bdbc5"
 routes = ["ddn.dev/store/pkg/", "www.ddn.dev/store/pkg/"]
